MPS-28471 SelectUp selects all siblings before selecting the parent